Removed the js in body function.

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body onload="onLoad()" onresize="onResize()" ng-app="myApp" ng-controller="todoCtrl">
+<body onload="onLoad()" onresize="onResize()">
 <script>
     function onLoad() {
         if(( /(ipad|iphone|ipod|android|windows phone)/i.test(navigator.userAgent) )) {
